<resources>
    <string name="app_name">TeacherHelper</string>
    <string name="schedule">Розклад</string>
    <string name="groups">Групи</string>
    <string name="alert">Нагадування</string>
    <string name="group_enter">Введіть назву групи</string>
    <string name="course_enter">Введіть курс</string>
    <string name="student_name_enter">Введіть ім\'я</string>
    <string name="student_surname_enter">Введіть прізвище </string>
    <string name="confirm">Підтвердити</string>
    <string name="delete">Видалити</string>
    <string name="dismiss">Відмінити</string>
    <string name="add_group">Додати нову групу</string>
    <string name="group_name_hint">Введіть назву групи</string>
    <string name="group_course_hint">Введіть курс</string>
    <string name="date_picker_hint">Виберіть дату</string>
    <string name="alert_send">Надіслати нагадування</string>
    <string name="hours_hint">Години</string>
    <string name="to_thems">Додати тему</string>
    <string name="add_student">Додати студента</string>
    <string name="theme_name_enter">Введіть назву теми</string>
    <string name="theme_mark_enter">Введіть максимальний бал</string>
    <string name="marks">%1$d / %2$d</string>
</resources>