<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/group_enter_filed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/group_enter" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_enter_filed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_enter_filed"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/course_enter"
            android:inputType="number" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_enter_filed"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/confirm"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_enter_filed"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginStart="40dp"
            android:text="@string/dismiss" />
    </RelativeLayout>
</layout>